--- a/scss/main.scss
+++ b/scss/main.scss
@@ -66,6 +66,10 @@ html, body {
         padding: 30px 0;
     }
 
+    &--warning {
+        background: #EBEBEB;
+    }
+
     &--first {
         background-color: #F3F6FD;
     }
@@ -1735,21 +1739,17 @@ html, body {
 
         @media (min-width: 576px) {
             padding: 60px 10px 20px 10px;
-            height: 170px;
+            height: 240px;
         }
 
         @media (min-width: 768px) {
             padding: 80px 10px 20px 10px;
-            height: 195px;
+            height: 260px;
         }
 
         @media (min-width: 992px) {
             padding: 110px 10px 50px 10px;
             height: 270px;
-        }
-
-        @media (min-width: 1200px) {
-            height: 300px;
         }
     }
 
@@ -1790,7 +1790,7 @@ html, body {
         }
 
         @media (min-width: 992px) {
-            font-size: 26px;
+            font-size: 20px;
         }
     }
 
@@ -1961,6 +1961,68 @@ html, body {
                     object-fit: cover;
                 }
             }
+        }
+    }
+}
+
+.warn {
+
+    &__title {
+        font-weight: 700;
+        font-size: 22px;
+        color: red;
+        line-height: 1.2;
+        margin-bottom: 20px;
+        text-transform: uppercase;
+        text-align: center;
+
+        @media (min-width: 768px) {
+            font-size: 28px;
+        }
+
+        @media (min-width: 992px) {
+            font-size: 36px;
+        }
+    }
+
+    &__desc {
+        font-size: 16px;
+        line-height: 1.1;
+        margin-bottom: 40px;
+        text-align: center;
+        color: red;
+        font-weight: 700;
+
+        @media (min-width: 992px) {
+            font-size: 24px;
+        }
+    }
+
+    &__btn {
+        margin-top: 30px;
+    }
+
+    &__text {
+        border: 1px dashed #FF0000;
+        font-size: 16px;
+        line-height: 1.2;
+        padding: 15px;
+        border-radius: 14px;
+
+        @media (min-width: 768px) {
+            font-size: 18px;
+            padding: 20px;
+        }
+    }
+
+    &__img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        max-width: 100px;
+
+        @media (min-width: 576px) {
+            max-width: 150px;
         }
     }
 }
