--- a/scss/main.scss
+++ b/scss/main.scss
@@ -66,6 +66,10 @@ html, body {
         padding: 30px 0;
     }
 
+    &--rules {
+        background-color: #5DB33A;
+    }
+
     &--day {
         background-color: #FFFAF1;
     }
@@ -2170,5 +2174,82 @@ html, body {
 
     & span {
         color: #009529;
+    }
+}
+
+.rules {
+    display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+
+    @media (min-width: 1200px) {
+        flex-wrap: nowrap;
+    }
+
+    &__title {
+        font-weight: 700;
+        font-size: 20px;
+        color: #fff;
+        margin-bottom: 25px;
+        text-align: center;
+
+        @media (min-width: 992px) {
+            font-size: 24px;
+            margin-bottom: 40px;
+        }
+    }
+
+    &__item {
+        flex-grow: 1;
+        display: flex;
+        justify-content: flex-start;
+        flex-direction: column;
+        align-items: center;
+        padding: 0 15px;
+        width: 50%;
+        margin-bottom: 30px;
+
+        @media (min-width: 576px) {
+            width: 33.3333%;
+        }
+
+        @media (min-width: 1200px) {
+            min-width: 13.3333%;
+            max-width: initial;
+            margin-bottom: 0;
+        }
+
+        &--big {
+            order: 2;
+
+            @media (min-width: 1200px) {
+                width: 100%;
+                order: initial;
+            }
+        }
+
+        &-img {
+            margin-bottom: 15px;
+            width: 75px;
+            height: 75px;
+            text-align: center;
+
+            @media (min-width: 1200px) {
+                margin-bottom: 30px;        
+            }
+
+            & img {
+                width: 100%;
+                height: 100%;
+                object-fit: contain;
+            }
+        }
+
+        &-text {
+            font-weight: 700;
+            font-size: 15px;
+            color: #fff;
+            text-align: center;
+        }
     }
 }
